--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <name>jmxeval</name>
   <groupId>com.adahas</groupId>
   <artifactId>jmxeval</artifactId>
-  <version>3.1.2-SNAPSHOT</version>
+  <version>3.2.0</version>
   <packaging>jar</packaging>
   <url>https://github.com/venushka/jmxeval</url>
 
